# homework_27

./: csv_to_json.py  db.sqlite3  pyproject.toml
ads/: admin.py  models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_location_alter_ad_options_alter_category_options_and_more.py  0003_alter_category_id.py
ads/views/: ads.py  categories.py  service.py  users.py
datasets/: ad.csv
homework_27/: asgi.py  settings.py  urls.py  wsgi.py
